--- a/src/components/QRScanner/QRScannerOverlay.css
+++ b/src/components/QRScanner/QRScannerOverlay.css
@@ -26,7 +26,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color: #C7C7CC;
+  background-color: #c7c7cc;
   border: none;
   border-radius: 50%;
   width: 30px;
