--- a/src/components/Sketchfab/SketchfabEmbed.css
+++ b/src/components/Sketchfab/SketchfabEmbed.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 216px;
   margin: 20px auto;
-  border: 2px solid #3A3A48;
+  border: 2px solid #3a3a48;
   border-radius: 10px;
   overflow: hidden;
   padding: 10px;
